feat:les6-contact

--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 
 </head>
 
-<body>
+<body id="includedContent">
     <div class="background-color-custom">
-        <nav aria-label="breadcrumb" class="breadcrumb-bar animated">
-            <div class="container text-center text-md-left">
+        <nav aria-label="breadcrumb" class="breadcrumb-bar animated" style="padding: 1rem 8rem;">
+            <div class="container-contact text-center text-md-left">
                 <h2>Contact - layout-3</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Contact - layout-3</li>
+                    <li class="breadcrumb-item" aria-current="page">Contact - layout-3</li>
                 </ol>
             </div>
         </nav>
@@ -35,7 +35,8 @@
             <div class="row">
                 <div class="col-md-6 contact-info animated">
                     <h3 class="header-title">Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i> The Design Themes Inc, Mary Jane St, Sydney 2233 Australia.
+                    <p><i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i> The Design Themes Inc, Mary
+                        Jane St, Sydney 2233 Australia.
                     </p>
                     <p><i class="fas fa-phone" style="margin-right: 10px;"></i> +1 200 258 2145</p>
                     <p><i class="fas fa-print" style="margin-right: 10px;"></i> +1 100 458 2345</p>
