feat:les15-footer

--- a/footer.html
+++ b/footer.html
@@ -10,93 +10,87 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
-<body>
-    <div class="bot">
-        <div class="center-logo">
-            <div class="row-footer justify-content-center">
-                <div class="col-auto">
-                    <img src="img/lms-logo.png" alt="LMS Logo" class="logo">
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="container">
-                <div class="row mt-5">
-                    <div class="col-md-3">
-                        <h5>About Us</h5>
-                        <p class="footer-text-aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et
-                            lobortis diam.</p>
-                        <p>Duis tellus enim, vestibulum eget varius id, vulputate et mi. Nullam feugiat, diam quis
-                            interdum
-                            varius
-                        </p>
-                        <div class="button-center">
-                            <button class="btn-footer btn-success">
-                                <span class="start-learning-now">START LEARNING NOW</span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Popular Courses</h5>
-                        <a href="#">Power Electronics<p href="#" style="margin-top: 2px; margin-bottom:-1px;">Free</p>
-                        </a>
-                        <a href="#">Introduction to Calculus<p href="#" style="margin-top: 2px; margin-bottom:-1px">Free
-                            </p></a>
-                        <a href="#">Basic Laws and Policies<p href="#" style="margin-top: 2px; margin-bottom:-1px;">Free
-                            </p></a>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Quick Links</h5>
-                        <a href="#">All Courses</a>
-                        <a href="#">Summer Sessions</a>
-                        <a href="#">Professional Courses</a>
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms of Use</a>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Contact Us</h5>
-                        <a><i class="fa-solid fa-building" style="margin-right: 10px;"></i>The Design Themes Inc.</a>
-                        <a><i class="fa-solid fa-map-pin" style="margin-right: 10px;"></i>Mary Jane St, Sydney 2233
-                            Australia.</a>
-                        <a><i class="fa-solid fa-phone" style="margin-right: 10px;"></i>+11 (2) 10654 2233</a>
-                        <a><i class="fa-solid fa-blender-phone" style="margin-right: 10px;"></i>+11 (5) 10654 2244
-                        </a>
-                        <a><i class="fa-solid fa-envelope" style="margin-right: 10px;"></i>lms@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer1">
-            <div class="container1">
-                <div class="abc">
-                    <span class="bcd">Copyright © 2020 LMS Theme All Rights Reserved | Design
-                        Themes</span>
-                </div>
-                <div class="social-icons">
-                    <a><i class="fab fa-twitter"></i></a>
-                    <a><i class="fab fa-youtube"></i></a>
-                    <a><i class="fab fa-facebook-f"></i></a>
-                    <a><i class="fab fa-skype"></i></a>
-                </div>
-            </div>
-            <div id="button-up" class="button-upscroll" style="position: fixed;" onclick="scrollXToZero()">
-                <i class="fas fa-level-up-alt"></i>
+<body id="includedContent">
+    <!-- <div class="bot"> -->
+    <div class="center-logo">
+        <div class="row-footer justify-content-center">
+            <div class="col-auto" style="position: relative;">
+                <img style="position: absolute; transform: translate(50%, 50%); bottom: 50%; left: -270%; background-color: #fff; border-radius: 50px;padding: 2px;"
+                    src="img/lms-logo.png">
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="container-footer">
+            <div class="row mt-5">
+                <div class="col-md-3">
+                    <h5>About Us</h5>
+                    <p class="footer-text-aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et
+                        lobortis diam.</p>
+                    <p>Duis tellus enim, vestibulum eget varius id, vulputate et mi. Nullam feugiat, diam quis
+                        interdum
+                        varius
+                    </p>
+                    <div class="button-center">
+                        <button class="btn-footer btn-success">
+                            <span class="start-learning-now">START LEARNING NOW</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h5>Popular Courses</h5>
+                    <a href="#">Power Electronics<p href="#" style="margin-top: 2px; margin-bottom:-1px;">Free</p>
+                    </a>
+                    <a href="#">Introduction to Calculus<p href="#" style="margin-top: 2px; margin-bottom:-1px">Free
+                        </p></a>
+                    <a href="#">Basic Laws and Policies<p href="#" style="margin-top: 2px; margin-bottom:-1px;">Free
+                        </p></a>
+                </div>
+                <div class="col-md-3">
+                    <h5>Quick Links</h5>
+                    <a href="#">All Courses</a>
+                    <a href="#">Summer Sessions</a>
+                    <a href="#">Professional Courses</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Use</a>
+                </div>
+                <div class="col-md-3">
+                    <h5>Contact Us</h5>
+                    <a><i class="fa-solid fa-building" style="margin-right: 10px;"></i>The Design Themes Inc.</a>
+                    <a><i class="fa-solid fa-map-pin" style="margin-right: 10px;"></i>Mary Jane St, Sydney 2233
+                        Australia.</a>
+                    <a><i class="fa-solid fa-phone" style="margin-right: 10px;"></i>+11 (2) 10654 2233</a>
+                    <a><i class="fa-solid fa-blender-phone" style="margin-right: 10px;"></i>+11 (5) 10654 2244
+                    </a>
+                    <a><i class="fa-solid fa-envelope" style="margin-right: 10px;"></i>lms@gmail.com</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer1">
+        <div class="container1">
+            <div class="abc">
+                <span class="bcd">Copyright © 2020 LMS Theme All Rights Reserved | Design
+                    Themes</span>
+            </div>
+            <div class="social-icons">
+                <a><i class="fab fa-twitter"></i></a>
+                <a><i class="fab fa-youtube"></i></a>
+                <a><i class="fab fa-facebook-f"></i></a>
+                <a><i class="fab fa-skype"></i></a>
+            </div>
+        </div>
+        <div id="button-up" class="button-upscroll" style="position: fixed;" onclick="scrollXToZero()">
+            <i class="fas fa-level-up-alt"></i>
+        </div>
+    </div>
+    <!-- </div> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="js/footer.js"></script>
+
 </body>
-<script>
-    function scrollXToZero() {
-        window.scroll({
-            top: 0,
-            left: window.scrollX,
-            behavior: 'smooth'
-        });
-    }
-</script>
 
 </html>
