--- a/footer.html
+++ b/footer.html
@@ -13,15 +13,15 @@
 <body>
     <div class="bot">
         <div class="center-logo">
-            <div class="row justify-content-center">
+            <div class="row-footer justify-content-center">
                 <div class="col-auto">
                     <img src="img/lms-logo.png" alt="LMS Logo" class="logo">
                 </div>
             </div>
         </div>
         <div class="footer">
-            <div class="container mb-4">
-                <div class="row">
+            <div class="container">
+                <div class="row mt-5">
                     <div class="col-md-3">
                         <h5>About Us</h5>
                         <p class="footer-text-aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et
@@ -31,7 +31,7 @@
                             varius
                         </p>
                         <div class="button-center">
-                            <button class="btn btn-success">
+                            <button class="btn-footer btn-success">
                                 <span class="start-learning-now">START LEARNING NOW</span>
                             </button>
                         </div>
@@ -42,7 +42,7 @@
                         </a>
                         <a href="#">Introduction to Calculus<p href="#" style="margin-top: 2px; margin-bottom:-1px">Free
                             </p></a>
-                        <a href="#">Basic Laws and Policies<p href="#" style="margin-top: 2px; margin-bottom:-1px">Free
+                        <a href="#">Basic Laws and Policies<p href="#" style="margin-top: 2px; margin-bottom:-1px;">Free
                             </p></a>
                     </div>
                     <div class="col-md-3">
