les14-ourprocess:fix data-aos-duration=2500

--- a/ourprocess.html
+++ b/ourprocess.html
@@ -21,7 +21,11 @@
           <h1>Our Process</h1>
           <div class="underline"></div>
         </div>
-        <div data-aos="fade-right" class="ourprocess-step1">
+        <div
+          data-aos="fade-right"
+          data-aos-duration="2500"
+          class="ourprocess-step1"
+        >
           <div class="content-op-container1">
             <div class="step-title">
               <h2 class="op-h2">Step 01</h2>
@@ -40,7 +44,11 @@
             <img class="img-row" src="./img/ourprocess/1.png" alt="" />
           </div>
         </div>
-        <div data-aos="fade-left" class="ourprocess-step2">
+        <div
+          data-aos="fade-left"
+          data-aos-duration="2500"
+          class="ourprocess-step2"
+        >
           <div class="img-row">
             <img src="./img/ourprocess/2.png" alt="" />
           </div>
@@ -59,7 +67,11 @@
             </div>
           </div>
         </div>
-        <div data-aos="fade-right" class="ourprocess-step1">
+        <div
+          data-aos="fade-right"
+          data-aos-duration="2500"
+          class="ourprocess-step1"
+        >
           <div class="content-op-container1">
             <div class="step-title">
               <h2 class="op-h2">Step 03</h2>
@@ -82,7 +94,11 @@
             <img src="./img/ourprocess/2.png" alt="" />
           </div>
         </div>
-        <div data-aos="fade-left" class="ourprocess-step2">
+        <div
+          data-aos="fade-left"
+          data-aos-duration="2500"
+          class="ourprocess-step2"
+        >
           <div class="img-row">
             <img src="./img/ourprocess/3.png" alt="" />
           </div>
