--- a/index.html
+++ b/index.html
@@ -20,117 +20,7 @@
     />
     <link rel="stylesheet" href="./css/style-intro.css" />
   </head>
-  <body>
-    <section class="introduction">
-      <div class="container-intro">
-        <div class="element elimated">
-          <div class="search-input">
-            <div class="search-form" data-mdb-input-init>
-              <input type="text" placeholder="Keywords" class="form-control" />
-              <button
-                type="button"
-                class="btn btn-primary search-btn"
-                data-mdb-ripple-init
-              >
-                <i class="fas fa-search"></i>
-              </button>
-            </div>
-          </div>
-          <div class="heading-title">
-            <h4 class="h4-heading-title">
-              We have the largest collection of courses
-            </h4>
-            <div class="viewallcourse">
-              <a href="#" class="view-all-course-link">View All Courses</a>
-              <div class="chevron-icon">
-                <img
-                  class="chevron-icon-img"
-                  src="/img/icon/chevron.png"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="counter-section">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3 col-sm-6 container-couter">
-                <div class="counter">
-                  <h1 class="count" data-count="332">332</h1>
-                  <div class="counter-line"></div>
-                  <p>Courses</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 container-couter">
-                <div class="counter">
-                  <h1 class="count" data-count="1403">1403</h1>
-                  <div class="counter-line"></div>
-                  <p>Members</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 container-couter">
-                <div class="counter">
-                  <h1 class="count" data-count="60">60</h1>
-                  <div class="counter-line"></div>
-                  <p>Authors</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 container-couter">
-                <div class="counter">
-                  <h1 class="count" data-count="120">120</h1>
-                  <div class="counter-line"></div>
-                  <p>Subjects</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container-content">
-        <div class="container-content-icon">
-          <div class="content-icon-wrapper">
-            <div class="content-icon">
-              <img class="logo-icon" src="./img/icon/logo11.png" alt="" />
-            </div>
-          </div>
-          <div class="content-title">
-            <h5 class="content-title-h5">Best Stimulations</h5>
-          </div>
-        </div>
-        <div class="content-container">
-          <div class="content-icon-wrapper">
-            <div class="content-icon">
-              <img class="logo-icon" src="./img/icon/logo12.png" alt="" />
-            </div>
-          </div>
-          <div class="content-title">
-            <h5 class="content-title-h5">Group Seminars</h5>
-          </div>
-        </div>
-        <div class="content-container">
-          <div class="content-icon-wrapper">
-            <div class="content-icon">
-              <img class="logo-icon" src="./img/icon/logo13.png" alt="" />
-            </div>
-          </div>
-          <div class="content-title">
-            <h5 class="content-title-h5">Analysed Syllabus</h5>
-          </div>
-        </div>
-        <div class="content-container">
-          <div class="content-icon-wrapper">
-            <div class="content-icon">
-              <img class="logo-icon" src="./img/icon/logo14.png" alt="" />
-            </div>
-          </div>
-          <div class="content-title">
-            <h5 class="content-title-h5">Pratical Training</h5>
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
+  <body></body>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <script
@@ -143,5 +33,5 @@
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"
   ></script>
-  <script src="./js/index.js"></script>
+  <script src="./js/intro.js"></script>
 </html>
