--- a/intro.html
+++ b/intro.html
@@ -16,8 +16,9 @@
     />
     <link
       rel="stylesheet"
-      href="./css/fontawesome-free-6.5.1-web/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+
     <link rel="stylesheet" href="./css/style-intro.css" />
   </head>
   <body>
@@ -32,7 +33,7 @@
                 class="btn btn-primary search-btn"
                 data-mdb-ripple-init
               >
-                <i class="fas fa-search"></i>
+                <i class="fa fa-search"></i>
               </button>
             </div>
           </div>
