fix code develop

--- a/index.html
+++ b/index.html
@@ -1,37 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/fontawesome-free-6.5.1-web/css/all.min.css"
-    />
-    <link rel="stylesheet" href="./css/style-intro.css" />
-  </head>
-  <body></body>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"
-  ></script>
-  <script src="./js/intro.js"></script>
+
+<head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+                integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+                crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./css/fontawesome-free-6.5.1-web/css/all.min.css" />
+        <link rel="stylesheet" href="./css/style-intro.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+                integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+                crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+                integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+                crossorigin="anonymous" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/style-ourprocess.css" />
+</head>
+
+<body style="background-color: #fdf6ea;">
+        <div data-include="header.html" data-css="/css/header.css" data-js="/js/translate.js"></div>
+        <div data-include="intro.html" data-css="/css/style-intro.css" data-js="/js/intro.js"></div>
+        <section style="padding-top: 400px;">
+                <div class="ourprocess-container">
+                        <div class="ourprocess-title">
+                                <h1>Our Process</h1>
+                                <div class="underline"></div>
+                        </div>
+                        <div data-aos="fade-right" data-aos-duration="2500" class="ourprocess-step1">
+                                <div class="content-op-container1">
+                                        <div class="step-title">
+                                                <h2 class="op-h2">Step 01</h2>
+                                                <h5 class="op-h4">Search for your course</h5>
+                                        </div>
+                                        <hr />
+                                        <div class="step-section">
+                                                <p class="step-p">
+                                                        Nemo enim ipsam voluptatem quia voluptas sit atur aut odit aut
+                                                        fugit, sed <br />quia consequuntur magni res.
+                                                </p>
+                                                <img class="img-icon" src="./img/ourprocess/search.png" alt="" />
+                                        </div>
+                                </div>
+                                <div class="img-row">
+                                        <img class="img-row" src="./img/ourprocess/1.png" alt="" />
+                                </div>
+                        </div>
+                        <div data-aos="fade-left" data-aos-duration="2500" class="ourprocess-step2">
+                                <div class="img-row">
+                                        <img src="./img/ourprocess/2.png" alt="" />
+                                </div>
+                                <div class="content-op-container">
+                                        <div class="step-title">
+                                                <h2 class="op-h21">Step 02</h2>
+                                                <h5 class="op-h41">Take a Sample Lesson</h5>
+                                        </div>
+                                        <hr />
+                                        <div class="step-section1">
+                                                <img class="img-icon" src="./img/ourprocess/system.png" alt="" />
+                                                <p class="step-p2">
+                                                        Nemo enim ipsam voluptatem quia voluptas sit atur aut odit aut
+                                                        fugit, sed <br />quia consequuntur magni res.
+                                                </p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div data-aos="fade-right" data-aos-duration="2500" class="ourprocess-step1">
+                                <div class="content-op-container1">
+                                        <div class="step-title">
+                                                <h2 class="op-h2">Step 03</h2>
+                                                <h5 class="op-h4">Preview the Syllabus</h5>
+                                        </div>
+                                        <hr />
+                                        <div class="step-section">
+                                                <p class="step-p">
+                                                        Nemo enim ipsam voluptatem quia voluptas sit atur aut odit aut
+                                                        fugit, sed <br />quia consequuntur magni res.
+                                                </p>
+                                                <img class="img-icon" src="./img/ourprocess/evaluation.png" alt="" />
+                                        </div>
+                                </div>
+                                <div class="img-row">
+                                        <img src="./img/ourprocess/2.png" alt="" />
+                                </div>
+                        </div>
+                        <div data-aos="fade-left" data-aos-duration="2500" class="ourprocess-step2">
+                                <div class="img-row">
+                                        <img src="./img/ourprocess/3.png" alt="" />
+                                </div>
+                                <div class="content-op-container">
+                                        <div class="step-title">
+                                                <h2 class="op-h21">Step 04</h2>
+                                                <h5 class="op-h41">Purchase the Course</h5>
+                                        </div>
+                                        <hr />
+                                        <div class="step-section1">
+                                                <img class="img-icon"
+                                                        src="./img/ourprocess/shopping-cart-with-product-inside.png"
+                                                        alt="" />
+                                                <p class="step-p2">
+                                                        Nemo enim ipsam voluptatem quia voluptas sit atur aut odit aut
+                                                        fugit, sed <br />quia consequuntur magni res.
+                                                </p>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </section>
+        <div data-include="footer.html" data-css="/css/footer.css" data-js="/js/footer.js"></div>
+</body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Bootstrap CSS -->
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<!-- Bootstrap CSS -->
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<!-- Popper.JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
+<script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js">
+        </script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+<script>
+        AOS.init();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+
+<script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js">
+        </script>
+<script src="/js/include-html.js"></script>
+<script src="/js/header.js"></script>
+<script src="/js/index.js"></script>
+
 </html>
